trabalhando no login via google

--- a/lib/modules/authentication/shared/strings/authentication_en.arb
+++ b/lib/modules/authentication/shared/strings/authentication_en.arb
@@ -1,5 +1,6 @@
 {
   "yourGoogleAccount": "Your Google Account",
+  "yourFacebookAccount": "Your Facebook Account",
   "exampleEmail": "example@email.com",
   "email": "Email",
   "obscurePassword": "***********",
