--- a/lib/modules/authentication/shared/strings/authentication_es.arb
+++ b/lib/modules/authentication/shared/strings/authentication_es.arb
@@ -1,5 +1,6 @@
 {
   "yourGoogleAccount": "Su cuenta de Google",
+  "yourFacebookAccount": "Tu cuenta de Facebook",
   "exampleEmail": "ejemplo@correo electrónico.com",
   "email": "Correo electrónico",
   "obscurePassword": "***********",
