--- a/lib/modules/authentication/shared/strings/authentication_pt.arb
+++ b/lib/modules/authentication/shared/strings/authentication_pt.arb
@@ -1,5 +1,6 @@
 {
   "yourGoogleAccount": "Sua conta Google",
+  "yourFacebookAccount": "Sua conta Facebook",
   "exampleEmail": "exemplo@email.com",
   "email": "E-mail",
   "obscurePassword": "***********",
