--- a/lib/modules/authentication/shared/strings/authentication_pt.arb
+++ b/lib/modules/authentication/shared/strings/authentication_pt.arb
@@ -18,5 +18,10 @@
   "createAccount": "Criar Conta",
   "requiredField": "Campo obrigatório",
   "invalidEmail": "email inválido",
-  "passwordsDontMatch": "Senhas não conferem"
+  "passwordsDontMatch": "Senhas não conferem",
+  "invalidParameters": "Parâmetros inválidos",
+  "accountCreatedSuccessfully": "Conta criada com Sucesso!",
+  "completeYourRegistration": "Complete seu cadastro",
+  "haveAccessContent": " e tenha acesso a todos os conteúdos.",
+  "startMeditating": "Comece a Meditar"
 }
