Cria componente de plaier da meditação

--- a/lib/modules/common/shared/strings/common_es.arb
+++ b/lib/modules/common/shared/strings/common_es.arb
@@ -1,3 +1,9 @@
 {
-  "home": "Home"
+  "hello": "Hola",
+  "homeHeaderDescription1": "¡Dedica tu tiempo a la paz mundial ahora mismo!",
+  "meditate5Minutes": "Medita 5 \nMinutos",
+  "fiveMinutes": "5 min",
+  "learnMethod": "Aprender \nmétodo",
+  "guidedMeditate": "\nMeditación guiada",
+  "meditateTime": "Medita en\ntu tiempo"
 }
