--- a/lib/modules/common/shared/strings/common_en.arb
+++ b/lib/modules/common/shared/strings/common_en.arb
@@ -1,3 +1,9 @@
 {
-  "home": "Home"
+  "hello": "Hello",
+  "homeHeaderDescription1": "Spend your time for world peace right now!",
+  "meditate5Minutes": "Meditate 5 \nMinutes",
+  "fiveMinutes": "5 min",
+  "learnMethod": "Learn \nmethod",
+  "guidedMeditate": "Guided \nMeditation",
+  "meditateTime": "Meditate in\nyour time"
 }
