--- a/lib/modules/common/shared/strings/common_pt.arb
+++ b/lib/modules/common/shared/strings/common_pt.arb
@@ -5,9 +5,5 @@
   "fiveMinutes": "5 min",
   "learnMethod": "Aprenda o \nmétodo",
   "guidedMeditate": "Meditação \nguiada",
-  "meditateTime": "Medite no \nseu tempo",
-  "meditometer": "Meditômetro",
-  "realTime": "EM TEMPO REAL",
-  "minutesMeditatedWorld": "de Minutos meditados no mundo",
-  "countriesReached": "PAÍSES ALCANÇADOS"
+  "meditateTime": "Medite no \nseu tempo"
 }
