adiciona testes unitarios para do modulo de meditate info

--- a/lib/shared/strings/shared_pt.arb
+++ b/lib/shared/strings/shared_pt.arb
@@ -6,5 +6,6 @@
   "realTime": "EM TEMPO REAL",
   "millions": "milhões ",
   "minutesMeditatedWorld": "de Minutos meditados no mundo",
-  "countriesReached": "PAÍSES ALCANÇADOS"
+  "countriesReached": "PAÍSES ALCANÇADOS",
+  "hello": "Olá"
 }
