cria testes unitarios para a tela de 5 minutos

--- a/lib/modules/meditate/shared/strings/meditate_pt.arb
+++ b/lib/modules/meditate/shared/strings/meditate_pt.arb
@@ -14,6 +14,6 @@
   "learnMeditate": "Aprenda a meditar",
   "tapStartMeditation": "Clique no botão para começar",
   "learnMethod": "Aprenda o método        ",
-  "remindMeditate": "Lembre-me me meditar",
+  "remindMeditate": "Lembre-me de meditar",
   "fiveMinutesTitle": "5 minutos"
 }
