Cria layout da tela de meditação no seu tempo

--- a/lib/modules/meditate/shared/strings/meditate_pt.arb
+++ b/lib/modules/meditate/shared/strings/meditate_pt.arb
@@ -15,5 +15,6 @@
   "tapStartMeditation": "Clique no botão para começar",
   "learnMethod": "Aprenda o método        ",
   "remindMeditate": "Lembre-me de meditar",
-  "fiveMinutesTitle": "5 minutos"
+  "fiveMinutesTitle": "5 minutos",
+  "inYourTime": "No seu tempo"
 }
