--- a/lib/modules/meditate/shared/strings/meditate_pt.arb
+++ b/lib/modules/meditate/shared/strings/meditate_pt.arb
@@ -16,5 +16,6 @@
   "learnMethod": "Aprenda o método        ",
   "remindMeditate": "Lembre-me de meditar",
   "fiveMinutesTitle": "5 minutos",
-  "inYourTime": "No seu tempo"
+  "inYourTime": "No seu tempo",
+  "aboutGuidedMeditation": "SOBRE"
 }
