--- a/lib/modules/meditate/shared/strings/meditate_pt.arb
+++ b/lib/modules/meditate/shared/strings/meditate_pt.arb
@@ -22,5 +22,9 @@
   "descriptionGuidedMeditation": "Essa meditação guiada é para liberar tensões acumuladas diariamente, com a prática, é possível alcançar estado de descanso profundo. Pode ser feita sentado, ou deitado, o importante é estar confortável. Assim que estiver em posição, faça 3 respirações, inspirando pelo nariz e expirando pela boca, de forma lenta e profunda. Assim, com a coluna reta, a respiração suave e lenta, olhos fechados, sinta a Paz e Harmonia.",
   "guidedMeditationProgramTitle": "meditaçao guiada LA JARDINERA",
   "seeTranslation": "Ver tradução",
-  "learnMore": "Saiba mais"
+  "learnMore": "Saiba mais",
+  "donationTitle": "SUA DOAÇÃO AJUDA A PAZ SER CADA VEZ MAIS MUNDIAL!",
+  "donationDescription": "Todas as doações recebidas ajudam o Instituto Mãos Sem Fronteiras a capacitarem mais voluntários e levarem a paz para cada vez mais pessoas.",
+  "donate": "DOAR",
+  "donationFooterDescription": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
 }
