adiciona testes unitarios a tela de calendario

--- a/lib/modules/calendar/shared/strings/calendar_pt.arb
+++ b/lib/modules/calendar/shared/strings/calendar_pt.arb
@@ -1,5 +1,7 @@
 {
   "youMeditated": "Você meditou:",
   "minutes": "Minutos esta ",
-  "week": "semana"
+  "week": "semana",
+  "month": "mês",
+  "year": "ano"
 }
