--- a/lib/modules/authentication/shared/strings/authentication_es.arb
+++ b/lib/modules/authentication/shared/strings/authentication_es.arb
@@ -1,22 +1,26 @@
 {
   "yourGoogleAccount": "Su cuenta de Google",
-  "yourFacebookAccount": "Tu cuenta de Facebook",
-  "exampleEmail": "ejemplo@correo electrónico.com",
-  "email": "Correo electrónico",
+  "yourFacebookAccount": "Su cuenta de Facebook",
+  "exampleEmail": "ejemplo@email.com",
+  "email": "E-mail",
   "obscurePassword": "***********",
   "password": "Contraseña",
   "rememberPassword": "Recordar contraseña",
   "forgotPassword": "Olvidé mi contraseña",
-  "signIn": "Iniciar sesión",
-  "orEnterUsing": "  O ingresa usando  ",
-  "meditateWithoutLogin": "Medita sin iniciar sesión",
-  "createOne": "Crear uno",
-  "account" : "cuenta",
-  "invalidEmail": "Correo electrónico no válido",
-  "name": "nombre",
+  "signIn": "Acceso",
+  "orEnterUsing": "  O entre usando  ",
+  "meditateWithoutLogin": "Meditar sin iniciar sesión",
+  "createOne": "crear una ",
+  "account": "cuenta",
+  "invalidEmail": "E-mail inválido",
+  "name": "Nombre",
   "confirmPassword": "Confirmar contraseña",
   "createAccount": "Crear cuenta",
   "requiredField": "Campo obligatorio",
-  "invalidEmail": "correo electrónico no válido",
-  "passwordsDontMatch": "Las contraseñas no coinciden"
+  "passwordsDontMatch": "Las contraseñas no coinciden",
+  "invalidParameters": "Parámetros inválidos",
+  "accountCreatedSuccessfully": "Cuenta creada con éxito",
+  "completeYourRegistration": "Complete su registro",
+  "haveAccessContent": "y tenga acceso a todos los contenidos",
+  "startMeditating": "Comience a Meditar"
 }
