--- a/lib/modules/calendar/shared/strings/calendar_es.arb
+++ b/lib/modules/calendar/shared/strings/calendar_es.arb
@@ -1,2 +1,8 @@
 {
+  "youMeditated": "Usde meditó:",
+  "minutes": "minutos ",
+  "week": "semana",
+  "month": "Mese",
+  "year": "Año",
+  "calendarTitle": "Tiempo por semana"
 }
