--- a/lib/modules/common/shared/strings/common_en.arb
+++ b/lib/modules/common/shared/strings/common_en.arb
@@ -1,13 +1,23 @@
 {
-  "hello": "Hello",
   "homeHeaderDescription1": "Spend your time for world peace right now!",
   "meditate5Minutes": "Meditate 5 \nMinutes",
   "fiveMinutes": "5 min",
   "learnMethod": "Learn \nmethod",
   "guidedMeditate": "Guided \nMeditation",
-  "meditateTime": "Meditate in\nyour time",
-  "meditometer": "Meditometer",
-  "realTime": "IN REAL TIME",
-  "minutesMeditatedWorld": "from MinutesMeditatedWorld",
-  "countriesReached": "COUNTRIES REACHED"
+  "meditateTime": "Meditate in \nyour time",
+  "profileHeaderDescription1": "Click here and complete your profile!",
+  "profileUpdateInfo": "Update your profile data and track your meditated minutes!",
+  "profileFormName": "Name",
+  "profileFormLastName": "Last Name",
+  "gender": "Gender",
+  "whereYouLive": "Where You Live",
+  "privacyPolicy1": "By saving your data you agree to our ",
+  "privacyPolicy2": "Privacy Policy",
+  "exitApp": "EXIT APP",
+  "dateBirth": "Date of Birth",
+  "datePickerLocation": "en_US",
+  "day": "Day",
+  "month": "Month",
+  "year": "Year",
+  "profileLabelButton": "Save Data"
 }
