--- a/lib/modules/common/shared/strings/common_es.arb
+++ b/lib/modules/common/shared/strings/common_es.arb
@@ -1,13 +1,23 @@
 {
-  "hello": "Hola",
-  "homeHeaderDescription1": "¡Dedica tu tiempo a la paz mundial ahora mismo!",
-  "meditate5Minutes": "Medita 5 \nMinutos",
+  "homeHeaderDescription1": "Sume su tiempo por la paz mundial ahora mismo!",
+  "meditate5Minutes": "Medite 5 \nMinutos",
   "fiveMinutes": "5 min",
-  "learnMethod": "Aprender \nmétodo",
-  "guidedMeditate": "\nMeditación guiada",
-  "meditateTime": "Medita en\ntu tiempo",
-  "meditometer": "meditómetro",
-  "realTime": "EN TIEMPO REAL",
-  "minutesMeditatedWorld": "de MinutosMeditatedWorld",
-  "countriesReached": "PAÍSES ALCANZADOS"
+  "learnMethod": "Aprenda el \nmétodo",
+  "guidedMeditate": "Meditación \nguiada",
+  "meditateTime": "Medite en \nsu tiempo",
+  "profileHeaderDescription1": "¡Haz clic aquí y completa tu perfil!",
+  "profileUpdateInfo": "¡Actualiza los datos de tu perfil y realiza un seguimiento de tus minutos meditados!",
+  "profileFormName": "Nombre",
+  "profileFormLastName": "Apellido",
+  "gender": "Género",
+  "whereYouLive": "Dónde reside",
+  "privacyPolicy1": "Al guardar sus datos usted acepta nuestras ",
+  "privacyPolicy2": "Políticas de Privacidad",
+  "exitApp": "SALIR DE LA APP",
+  "dateBirth": "Fecha de Nacimiento",
+  "datePickerLocation": "es_ES",
+  "day": "Día",
+  "month": "Mes",
+  "year": "Año",
+  "profileLabelButton": "Guardar los datos"
 }
