--- a/lib/modules/meditate/shared/strings/meditate_en.arb
+++ b/lib/modules/meditate/shared/strings/meditate_en.arb
@@ -1,5 +1,30 @@
 {
-  "alreadyAdded": "Você já somou ",
-  "minutes": "minutos",
-  "worldPeace": "pela paz mundial!"
+  "alreadyAdded": "You have already added",
+  "minutes": "minutes",
+  "worldPeace": "for world peace!",
+  "methodTitle": "Method 3 5 3",
+  "methodDescriptionPhrase1": "Sit with your spine straight.",
+  "methodDescriptionPhrase2": "With your eyes open do ",
+  "methodDescriptionPhrase3": "breathes by pulling air through the nose and releasing it through the mouth.",
+  "methodDescriptionPhrase4": "Press play on the screen to start the meditation and close your eyes. During ",
+  "methodDescriptionPhrase5": "for a few minutes focus on the soundtrack. At the end, open your eyes and do more",
+  "methodDescriptionPhrase6": "deep breaths.",
+  "threeBreaths": "3",
+  "fiveMinutes": "5",
+  "learnMeditate": "Learn to meditate",
+  "tapStartMeditation": "Click the button to start",
+  "learnMethod": "Learn method",
+  "remindMeditate": "Remind me to meditate",
+  "fiveMinutesTitle": "5 minutes",
+  "inYourTime": "In your time",
+  "aboutGuidedMeditation": "ABOUT",
+  "titleGuidedMeditation": "This meditation was guided by La Jardinera (Fubdadora of the Mãos sem Fronteiras Organization - www.msfint.com)",
+  "descriptionGuidedMeditation": "This guided meditation is to release tension accumulated daily, with practice, it is possible to achieve a state of deep rest. It can be done sitting or lying down, the important thing is to be comfortable. Once you are in position, take 3 breaths , inhaling through the nose and exhaling through the mouth, slowly and deeply. Thus, with a straight spine, soft and slow breathing, eyes closed, feel Peace and Harmony.",
+  "guidedMeditationProgramTitle": "guided meditation LA JARDINERA",
+  "seeTranslation": "See translation",
+  "learnMore": "Learn more",
+  "donationTitle": "YOUR DONATION HELPS PEACE TO BE INCREASINGLY WORLDWIDE!",
+  "donationDescription": "All donations received help the Mãos Sem Fronteiras Institute to train more volunteers and bring peace to more and more people.",
+  "donate": "DONATE",
+  "donationFooterDescription": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
 }
