--- a/lib/modules/meditate/shared/strings/meditate_es.arb
+++ b/lib/modules/meditate/shared/strings/meditate_es.arb
@@ -1,5 +1,30 @@
 {
-  "alreadyAdded": "Você já somou ",
+  "alreadyAdded": "Usted ya sumó",
   "minutes": "minutos",
-  "worldPeace": "pela paz mundial!"
+  "worldPeace": "por la paz mundial",
+  "methodTitle": "Método 3 5 3",
+  "methodDescriptionPhrase1": "Siéntese con la columna recta",
+  "methodDescriptionPhrase2": "Con los ojos abiertos haga",
+  "methodDescriptionPhrase3": "respiraciones absorbiendo aire por la nariz y expulsando por la boca.",
+  "methodDescriptionPhrase4": "Presione play en la pantalla para iniciar la meditación y cierre los ojos. Durante",
+  "methodDescriptionPhrase5": "minutos concéntrese en la banda sonora. Al final, abra los ojos y haga más ",
+  "methodDescriptionPhrase6": "respiraciones profundas.",
+  "threeBreaths": "3",
+  "fiveMinutes": "5 ",
+  "learnMeditate": "Aprenda a meditar",
+  "tapStartMeditation": "Haga clic en el botón para comenzar",
+  "learnMethod": "Aprenda el método        ",
+  "remindMeditate": "Recuérdame meditar",
+  "fiveMinutesTitle": "5 minutos",
+  "inYourTime": "En su tiempo",
+  "aboutGuidedMeditation": "sobre",
+  "titleGuidedMeditation": "Esa meditación fue guiada por La Jardinera (Fundadora de la Organización Manos Sin Fronteras, www.msfint.com)",
+  "descriptionGuidedMeditation": "Esta meditación guiada es para liberar tensiones acumuladas diariamente, con la práctica es posible crear un estado de descanso profundo. Puede hacerse sentado o acostado. Lo importante es estar confortable.Cuando esté en esa posición, haga 3 respiraciones inhalando por la nariz y exhalando por la boca, de forma lenta y profunda. Así, con la columna recta, la respiración suave y lenta, los ojos cerrados, sienta la Paz y Armonía.",
+  "guidedMeditationProgramTitle": "Meditación guiada LA JARDINERA",
+  "seeTranslation": "Ver traducción",
+  "learnMore": "Conozca más",
+  "donationTitle": "SU DONACIÓN AYUDA A QUE LA PAZ SEA CADA VEZ MÁS MUNDIAL",
+  "donationDescription": "Todas las donaciones recibidas ayudan a Manos Sin Fronteras a capacitar más voluntarios y llevar la paz a más y más personas.",
+  "donate": "donar",
+  "donationFooterDescription": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
 }
