--- a/lib/modules/meditometer/shared/strings/meditometer_es.arb
+++ b/lib/modules/meditometer/shared/strings/meditometer_es.arb
@@ -1,2 +1,16 @@
 {
+  "meditometerTitle": "Cada vez que usted medita, suma su tiempo para la paz mundial",
+  "meditometer": "MEDITÓMETRO",
+  "inRealTime": "EN TIEMPO REAL",
+  "minutesMeditated": "MINUTOS MEDITADOS EN EL MUNDO",
+  "share": "Compartir",
+  "meditometerCardDescription1": "Este es el contador mundial de minutos meditados mediante la aplicación",
+  "meditometerParagraph1": "La aplicación",
+  "meditometerParagraph2": "5 Minutos Yo Medito",
+  "meditometerParagraph3": "fue lanzado por la fundadora de la Organización Mundial ",
+  "meditometerParagraph4": "Manos Sin Fronteras",
+  "meditometerParagraph5": ", La Jardinera, y es utilizado en más de 80 países",
+  "meditometerParagraph6": "La aplicación tiene como proposito compartir el método 3-5-3 de meditación de manera práctica, simple y eficaz",
+  "meditometerParagraph7": "Solamente 5 minutos al día son suficientes para conqueistar los beneficios de bien-estar.",
+  "aboutProgram": "Conozca más sobre la causa"
 }
