--- a/lib/modules/calendar/shared/strings/calendar_pt.arb
+++ b/lib/modules/calendar/shared/strings/calendar_pt.arb
@@ -3,5 +3,6 @@
   "minutes": "Minutos esta ",
   "week": "semana",
   "month": "mês",
-  "year": "ano"
+  "year": "ano",
+  "calendarTitle": "Tempo por semana"
 }
