--- a/lib/modules/calendar/shared/strings/calendar_en.arb
+++ b/lib/modules/calendar/shared/strings/calendar_en.arb
@@ -4,5 +4,8 @@
   "week": "week",
   "month": "month",
   "year": "year",
-  "calendarTitle": "Weather per week"
+  "calendarTitle": "Weather per week",
+  "weekToUpper": "Week",
+  "monthToUpper": "Month",
+  "yearToUpper": "Year"
 }
