--- a/lib/modules/authentication/shared/strings/authentication_en.arb
+++ b/lib/modules/authentication/shared/strings/authentication_en.arb
@@ -6,21 +6,21 @@
   "obscurePassword": "***********",
   "password": "Password",
   "rememberPassword": "Remember password",
-  "forgotPassword": "I forgot my password",
-  "signIn": "Sign In",
+  "forgotPassword": "Forgot my password",
+  "signIn": "Login",
   "orEnterUsing": " Or enter using ",
-  "meditateWithoutLogin": "Meditate without Login",
+  "meditateWithoutLogin": "Meditate without logging in",
   "createOne": "Create one ",
   "account": "account",
   "invalidEmail": "Invalid Email",
   "name": "Name",
-  "confirmPassword": "Confirm Password",
+  "confirmPassword": "Confirm your password",
   "createAccount": "Create Account",
-  "requiredField": "Required field",
-  "passwordsDontMatch": "Passwords don't match",
-  "invalidParameters": "Invalid parameters",
-  "accountCreatedSuccessfully": "Account created successfully!",
+  "requiredField": "Mandatory field",
+  "passwordsDontMatch": "Passwords do not match",
+  "invalidParameters": "Invalid Information Provided",
+  "accountCreatedSuccessfully": "Account Created Successfully!",
   "completeYourRegistration": "Complete your registration",
-  "haveAccessContent": " and have access to all content.",
-  "startMeditating": "Start Meditating"
+  "haveAccessContent": "get access to all content.",
+  "startMeditating": "Start to meditate"
 }
