--- a/lib/modules/calendar/shared/strings/calendar_en.arb
+++ b/lib/modules/calendar/shared/strings/calendar_en.arb
@@ -1,5 +1,5 @@
 {
-  "youMeditated": "You meditated:",
+  "youMeditated": "You have meditated:",
   "minutes": "Minutes this ",
   "week": "week",
   "month": "month",
