--- a/lib/modules/common/shared/strings/common_en.arb
+++ b/lib/modules/common/shared/strings/common_en.arb
@@ -1,19 +1,19 @@
 {
-  "homeHeaderDescription1": "Spend your time for world peace right now!",
+  "homeHeaderDescription1": "Add your time toward global peace now!!",
   "meditate5Minutes": "Meditate 5 \nMinutes",
   "fiveMinutes": "5 min",
-  "learnMethod": "Learn \nmethod",
+  "learnMethod": "Learn the method",
   "guidedMeditate": "Guided \nMeditation",
-  "meditateTime": "Meditate in \nyour time",
+  "meditateTime": "Meditate with \nyour time",
   "profileHeaderDescription1": "Click here and complete your profile!",
   "profileUpdateInfo": "Update your profile data and track your meditated minutes!",
   "profileFormName": "Name",
   "profileFormLastName": "Last Name",
   "gender": "Gender",
-  "whereYouLive": "Where You Live",
-  "privacyPolicy1": "By saving your data you agree to our ",
+  "whereYouLive": "Where do you live",
+  "privacyPolicy1": "By saving your data, you agree to our ",
   "privacyPolicy2": "Privacy Policy",
-  "exitApp": "EXIT APP",
+  "exitApp": "EXIT THE APP",
   "dateBirth": "Date of Birth",
   "datePickerLocation": "en_US",
   "day": "Day",
