adiciona novas traduções e ajustes de layout

--- a/lib/modules/calendar/shared/strings/calendar_de.arb
+++ b/lib/modules/calendar/shared/strings/calendar_de.arb
@@ -1,6 +1,7 @@
 {
   "youMeditated": "Sie haben meditiert:",
   "minutes": "Minuten",
+  "minutes2": "Minuten",
   "week": "woche",
   "month": "monat",
   "year": "jahr",
