--- a/lib/modules/calendar/shared/strings/calendar_en.arb
+++ b/lib/modules/calendar/shared/strings/calendar_en.arb
@@ -1,6 +1,7 @@
 {
   "youMeditated": "You have meditated:",
   "minutes": "Minutes this ",
+  "minutes2": "Minutes this ",
   "week": "week",
   "month": "month",
   "year": "year",
