--- a/lib/modules/calendar/shared/strings/calendar_es.arb
+++ b/lib/modules/calendar/shared/strings/calendar_es.arb
@@ -1,6 +1,7 @@
 {
   "youMeditated": "Usde meditó:",
-  "minutes": "minutos ",
+  "minutes": "Min de esta",
+  "minutes2": "Min de este",
   "week": "semana",
   "month": "mese",
   "year": "año",
