--- a/lib/modules/calendar/shared/strings/calendar_it.arb
+++ b/lib/modules/calendar/shared/strings/calendar_it.arb
@@ -1,6 +1,7 @@
 {
   "youMeditated": "Hai meditato:",
-  "minutes": "minuti ",
+  "minutes": "Min questa",
+  "minutes2": "Min di questo",
   "week": "settimana",
   "month": "mese",
   "year": "anno",
