--- a/lib/modules/calendar/shared/strings/calendar_pt.arb
+++ b/lib/modules/calendar/shared/strings/calendar_pt.arb
@@ -1,6 +1,7 @@
 {
   "youMeditated": "Você meditou:",
-  "minutes": "Minutos esta ",
+  "minutes": "Min esta ",
+  "minutes2": "Min este ",
   "week": "semana",
   "month": "mês",
   "year": "ano",
