adiciona suporte para argumentos na rota da câmera, permitindo a passagem de chave e controlador de câmera, e atualiza a localização do seletor de data para 'en'

--- a/lib/modules/common/shared/strings/common_en.arb
+++ b/lib/modules/common/shared/strings/common_en.arb
@@ -15,7 +15,7 @@
   "privacyPolicy2": "Privacy Policy",
   "exitApp": "EXIT THE APP",
   "dateBirth": "Date of Birth",
-  "datePickerLocation": "en_US",
+  "datePickerLocation": "en",
   "day": "Day",
   "month": "Month",
   "year": "Year",
